add component overview

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -10,12 +10,12 @@
   {% if page.layout == "home" %}
     {{ page.title }}
   {% else %}
-    {{ page.title }} &middot; Tarsius-UI
+    {{ page.title }} &middot; Lussa UI
   {% endif %}
 </title>
 
 <!-- tarsius ui -->
-<link rel="stylesheet" type="text/css" href="dist/css/tarsius-ui.min.css"/>
+<link rel="stylesheet" type="text/css" href="dist/css/lussa-ui.min.css"/>
 <link rel="stylesheet" type="text/css"  href="assets/css/docs.css"/>
 <!-- syntax highlighting -->
 <link rel="stylesheet" type="text/css" href="assets/css/highlights/tomorrow_night.css"/>
