--- a/docs/_includes/nav/main.html
+++ b/docs/_includes/nav/main.html
@@ -15,6 +15,9 @@
             <li {% if page.slug == 'component' %} class="active" {% endif %}>
                 <a href="/component.html">Components</a>
             </li>
+            <li {% if page.slug == 'block' %} class="active" {% endif %}>
+                <a href="/block.html">Blocks</a>
+            </li>
             <li {% if page.slug == 'theme' %} class="active" {% endif %}>
                 <a href="/theme.html">Theme</a>
             </li>
