--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -7,16 +7,20 @@
 <script src="lib/jquery-easing-original/jquery.easing.min.js" type="text/javascript"></script>
 <script src="lib/underscore/underscore.js" type="text/javascript"></script>
 <script src="lib/underscore.string/underscore.string.js" type="text/javascript"></script>
+
+<!-- angular dependency -->
+{% if page.angular %}
 <script src="lib/angular/angular.js" type="text/javascript"></script>
 <script src="lib/angular-animate/angular-animate.js" type="text/javascript"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js" type="text/javascript"></script>
+{% endif %}
 
 <!-- tarsius main scripts -->
-<script src="dist/js/tarsius-ui.min.js" type="text/javascript" ></script>
+<script src="dist/js/lussa-ui.min.js" type="text/javascript" ></script>
 
 <!-- app script -->
-{% if slug != 'components' %}
-<script src="assets/js/docs.js" type="text/javascript" ></script>
-{% elsif slug == 'components' %}
+{% if page.angular %}
 <script src="assets/js/docs-ng.js" type="text/javascript" ></script>
+{% else %}
+<script src="assets/js/docs.js" type="text/javascript" ></script>
 {% endif %}
